<resources>
    <string name="app_name">Saufapparat</string>
    <string name="language">Deutsch</string>
    <string name="disclaimer">Kenne deine Grenzen! Die Angaben sind nur als Vorschlag zu beachten. Vorsichtiger Umgang mit Alkohol!</string>
    <string name="disclaimerAkzeptiert">Akzeptiert!</string>
    <string name="disclaimer_title">Achtung</string>

    <string name="mainActivity_logo">Saufapparat</string>
    <string name="mainActivity_playbutton">Spielen</string>
    <string name="quickplay">Schnellspiel</string>

    <string name="Informationen">Informationen</string>
    <string name="moreInformationActivity_previousButton">Zurück</string>

    <string name="groupActivity_header">Spielerwahl</string>
    <string name="player_hint">Spieler</string>
    <string name="player1_hint">Spieler 1</string>
    <string name="player2_hint">Spieler 2</string>
    <string name="playerAddSign">+</string>
    <string name="groupActivity_previousButton">Zurück</string>
    <string name="groupActivity_nextButton">Weiter</string>

    <string name="packageActivity_header">Paketwahl</string>
    <string name="packageActivity_previousButton">Zurück</string>
    <string name="packageActivity_startButton">Spielen</string>

    <string name="SpielEinstellungen">Einstellungen</string>
    <string name="Trinkstärke">Trinkstärke</string>
    <string name="Getränketyp">Getränketyp</string>

    <string name="standardPaket_label">Standard</string>
    <string name="standardPaket_sub">Für die perfekte Party</string>
    <string name="standardPaket_price">Frei</string>
    <string name="standardPaket_infoText">Aufgaben, Regeln und Abstimmungen brechen das Eis oder bringen Schwung in die Runde. Bei manchen Aufgaben wird man aktiv, bei anderen wird lediglich der Durst gestillt.</string>

    <string name="onlinePaket_label">Online</string>
    <string name="onlinePaket_sub">Für das online Meeting mit den Freunden</string>
    <string name="onlinePaket_price">Frei</string>
    <string name="onlinePaket_infoText">Auch wenn man sich mal nicht persönlich treffen kann, sorgen die Aufgaben für viel Spaß, Zusammenhalt und neue Herausforderungen.</string>

    <string name="activityPaket_label">Aktiv</string>
    <string name="activityPaket_sub">Mit viel Bewegung und perfekt für draußen</string>
    <string name="activityPaket_price">Frei</string>
    <string name="activityPaket_infoText">Perfekt für einen coolen Abend im Freien oder für den nötigen Schwung bei einer Party. Viele witzige Aufgaben um ein bisschen Bewegung in euer Spiel zu bringen oder dafür zu sorgen, dass niemand einschläft.</string>

    <string name="hotPaket_label">Hot 18+</string>
    <string name="hotPaket_sub">Nichts für schwache Nerven</string>
    <string name="hotPaket_price">3,99€</string>
    <string name="hotPaket_infoText">Für heiße Erlebnisse und viel Körperkontakt</string>

    <string name="package_bought">gekauft</string>

    <string name="packageActivity_ComingSoon">Bald mehr...</string>

    <string name="karten_gemischt">Karten gemischt!</string>
    <string name="mul_entspannt">entspannt</string>
    <string name="mul_normal">normal</string>
    <string name="mul_stark">stark</string>
    <string name="mul_extrem">extrem</string>
    <string name="mul_hardcore">hardcore</string>
    <string name="gameLoop_Schlucke">Schlucke</string>
    <string name="gameLoop_Shots">Shots</string>

    <string name="alt_instagram">Instagram Link</string>
    <string name="alt_language">Sprache tauschen</string>
    <string name="alt_Bierkrug">Bierkrug</string>
    <string name="alt_Bildschirm">Bildschirm</string>
    <string name="alt_Turnschuh">Turnschuh</string>
    <string name="alt_infoicon">Infobutton</string>
    <string name="alt_zuruckPfeil">Zurück</string>

    <string name="spezial_standardpack_aus">aus</string>
    <string name="spezial_standardpack_zufall">zufällig</string>
    <string name="spezial_textview_standard">Abfüllen</string>
    <string name="spezial_textview_online">Schauspieler</string>
    <string name="spezial_textview_activity">Zufälle</string>
    <string name="spezial_textview_hot">Super Hot</string>
</resources>