<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flo5"
    tools:context="de.saufapparat.trinkspiel.GroupSelectionPage">

    <TextView
        android:id="@+id/textView_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/groupActivity_header"
        android:textColor="@color/white"
        android:textSize="56sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="28sp"
        android:autoSizeMaxTextSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/playerListScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Header"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/playerListLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

            <EditText
                android:id="@+id/player1EditText"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:backgroundTint="@color/white"
                android:hint="@string/player1_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <ImageView
                android:id="@+id/closeKeyBoardImage"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:src="@drawable/haken"
                android:onClick="closeKeyBoard"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_addPlayer"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:onClick="addNewPlayerInput"
                android:text="@string/playerAddSign"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="24dp"
        android:onClick="redirectBack"
        android:text="@string/groupActivity_previousButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_groupReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:onClick="openPackageSelectionPage"
        android:text="@string/groupActivity_nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>